[package]
name = "biptt_macro_impl"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.15"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0.10"
