[package]
name = "biptt_macro"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5.15"
biptt_macro_impl = { path = "../biptt_macro_impl" }
